<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home" />
        <item
                android:id="@+id/nav_my_account"
                android:title="@string/nav_my_account"
                />
        <item
            android:id="@+id/nav_sell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:title="@string/nav_sell" />
        <item
            android:id="@+id/nav_category"
            android:title="@string/nav_category" />
        <item
            android:id="@+id/nav_info"
            android:title="@string/nav_info" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
