<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.frosty.farmbuddy.Activities.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />


    <LinearLayout
        android:id="@+id/LinearLay_LoginVerify"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center">

        <EditText

            android:id="@+id/et_verification_code"
            android:inputType="number"
            android:hint="@string/text_Verification_code"
            android:background="@drawable/shape_round"
            android:elevation="@dimen/elevation_less"
            android:layout_width="200dp"
            android:paddingLeft="@dimen/padding_left_et"
            android:layout_height="50dp" tools:targetApi="lollipop" />

        <Button

            android:id="@+id/bt_verify"
            android:text="@string/text_verify"
            android:textAllCaps="false"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorAccentDark"
            android:background="@drawable/shape_round"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="50dp"
            android:id="@+id/tv_resend_OTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_resendOTP"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/lineraLay_login_input"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:gravity="center">


        <EditText

            android:id="@+id/et_phone"
            android:inputType="phone"
            android:hint="@string/text_mobile_number"
            android:background="@drawable/shape_round"
            android:elevation="@dimen/elevation_less"
            android:layout_width="200dp"
            android:paddingLeft="@dimen/padding_left_et"
            android:layout_height="50dp" tools:targetApi="lollipop"/>


        <Button

            android:id="@+id/bt_Login"
            android:text="@string/text_login"
            android:textAllCaps="false"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorAccentDark"
            android:background="@drawable/shape_round"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <TextView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textSize="14sp"
        android:id="@+id/tv_user_reg"
        android:text="@string/text_user_reg"
        android:textStyle="normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        </TextView>
    </LinearLayout>

</FrameLayout>
